js/js.translator/testData/incremental/invalidation/functionTypeInterface/lib2/l2a.15.kt
fun getString(): String {
    konst s: suspend (Any, Any, Any, Any, Any) -> Unit = { _, _, _, _, _ -> }
    return "${s::class}"
}
